@@ -1,4 +1,12 @@
 NEXT VERSION
+  - Tandy emulation: Add the string "Tandy" somewhere in the DOS kernel
+    at startup if machine=tandy. The game "The Train: Escape to Normandy"
+    scans from FFFF:0000 for the string "Tandy" which of course wraps
+    around to the first 64KB of memory where the DOS kernel resides. If
+    it does not see this string, it does not think it is running on a Tandy.
+    Such a detection routine will obviously break if you're on a 286 based
+    Tandy with HMA enabled, or you're running normal MS-DOS on a Tandy
+    system. This change allows the game to run (joncampbell123).
   - Tseng ET4000 emulation: Mode 0x24 is unusual in that it is a 130x28
     text mode with a 13-pixel high character cell. The ET4000 VGA BIOS
     apparently has a specific font for that mode, so, incorporate that
